kubernetes/uaa-k8s/uaa-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uaa
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uaa
      version: 'v1'
  template:
    metadata:
      labels:
        app: uaa
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - uaa
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: uaa-app
          image: 172.16.23.89:5000/uaa:2.0
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 9999
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
