kubernetes/uaa-k8s/uaa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: uaa
  namespace: jhipster
  labels:
    app: uaa
spec:
  selector:
    app: uaa
  ports:
    - name: http
      port: 80
      targetPort: 9999
