kubernetes/uaa-k8s/uaa-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uaa-virtualservice
  namespace: jhipster
spec:
  hosts:
    - uaa
  http:
    - route:
        - destination:
            host: uaa
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
